--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="myapp">
+<html lang="en" ng-app="myApp">
 <head>
   <meta charset="UTF-8">
   <title>Aims Angular2 Demo</title>
@@ -8,7 +8,7 @@
   <!-- endinject -->
 </head>
 <body style="padding-top:127px;">
-	<div ui-view></div>
+
 
 	<myapp-home></myapp-home>
 
